# xfer_india100x

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
xfer/: .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.js
xfer/src/: App.jsx  main.jsx
xfer/src/api/: axios.js
xfer/src/components/: Allcustomer-table.jsx  ApiKeysTable.jsx  AuditLogsTable.jsx  CalendarDateRangePicker.jsx  ChangePasswordSection.jsx  CreateOrderForm.jsx  CreateProgramForm.jsx  DashboardFullChart.jsx  DataTableFacetedFilter.jsx  DataTablePagination.jsx  DataTableToolbar.jsx  DataTableViewOptions.jsx  FeeCodeSheet.jsx  Flaggedcustomer-table.jsx  ForgotPasswordForm.jsx  FundingTransaction-table.jsx  Icons.jsx  InputOTPForm.jsx  IpWhitelistingTable.jsx  Layout.jsx  MakePayment.jsx  ManagerActivityLogs.jsx  ManagerProgramList.jsx  PendingKyc-table.jsx  PoolAccount-table.jsx  ProgramControls.jsx  (+37 more)
xfer_backend/: hooks.py  lead_enrichment_agent.py  modules.txt
xfer_backend/fixtures/: bins.json  card_status.json  cards.json  client_script.json  customer_kyc_table.json  customers.json  fee_types.json  funding_transactions.json  kyc_document.json  kyc_level.json  kyc_status.json  mcc_codes.json  mcc_whitelisting.json  mids.json  order_status.json  pool_account.json  program.json  program_category.json  program_fees_structure.json  program_kyc_table.json  program_manager.json  program_status.json  risk_category.json  tids.json  transaction_channel.json  transaction_limit.json  transaction_logs.json
xfer_backend/www/: xfer.html  xfer.py
(+179 files in other folders)
